# himawari8

./: .gitignore  LICENSE  README.md  himawari8.cabal  stack.yaml
app/: Main.hs  hi8_truecolor.hs
src/: Lib.hs  Req.hs
