name:                himawari8
version:             0.1.2.0
synopsis:            A small program to download pictures taken by the Himawari-8 satellite
description:         Please see README.md
homepage:            https://github.com/spicker/himawari8
license:             BSD3
license-file:        LICENSE
author:              Christoph Spickermann
maintainer:          spickermannc@gmail.com
copyright:           2016 Christoph Spickermann
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , HTTP 
                     , JuicyPixels 
                     , friday
                     , async
                     , friday-juicypixels
                     , network-uri
                     , text
                     , time
                     , bytestring
                     , wreq
                     , lens
                    
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable himawari8
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -j4 -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , himawari8
                     , turtle
                     , lens
              
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


source-repository head
  type:     git
  location: https://github.com/spicker/himawari8
